# image-segmentation

./: README.md  threshold.cpp
Agglomerative_-RegionGrowingCluster/: main.cpp
K_Means/: CMakeLists.txt  main.cpp
K_Means/include/: kmeans.h
Mean Shift/: Main.cpp  Meanshift.cpp  Meanshift.hpp
UI-FILES/: CMakeLists.txt
UI-FILES/forms/: mainwindow.ui  untitled.ui
UI-FILES/include/: mainwindow.h  threshold.h
UI-FILES/src/: kmeans.cpp  main.cpp  mainwindow.cpp  threshold.cpp
